Revert "Iced PopOS fork"
This reverts commit 3e0b0257e3efa34776226aa30566e7b3df659783.

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 iced_table = { path = "../" }
-iced = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13", features = ["lazy", "winit"] }
+iced = { version = "0.13", features = ["lazy"] }
